hphp/test/zend/good/016.php
<?php

$foo = NULL; 
isset($foo->bar->bar);

echo "Done\n";
?>