hphp/test/zend/bad/zend/errmsg_006.php
<?php

$a = array();
$b = $a[];

echo "Done\n";
?>